fix aligning in action-control on big screens

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -5673,6 +5673,10 @@ output {
   .action-controls {
     display: flex;
     margin-left: auto;
+    
+    .btn {
+      align-self: center;
+    }
   }
 }
 
